# c2sproject

./: README.md  pyproject.toml
src/c2s_script/: main.py
